--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
   <meta name="citation_fulltext_html_url" content="https://yt-project.github.io/yt-4.0-paper/" />
   <meta name="citation_pdf_url" content="https://yt-project.github.io/yt-4.0-paper/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://yt-project.github.io/yt-4.0-paper/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://yt-project.github.io/yt-4.0-paper/v/95bfe80cedacc5d9139cc6cadbb9ddb82be6689c/" />
-  <meta name="manubot_html_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/95bfe80cedacc5d9139cc6cadbb9ddb82be6689c/" />
-  <meta name="manubot_pdf_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/95bfe80cedacc5d9139cc6cadbb9ddb82be6689c/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://yt-project.github.io/yt-4.0-paper/v/90d6f3ccc31815e6dd176d7d202eec7ae2f508e2/" />
+  <meta name="manubot_html_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/90d6f3ccc31815e6dd176d7d202eec7ae2f508e2/" />
+  <meta name="manubot_pdf_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/90d6f3ccc31815e6dd176d7d202eec7ae2f508e2/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -298,9 +298,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://yt-project.github.io/yt-4.0-paper/v/95bfe80cedacc5d9139cc6cadbb9ddb82be6689c/">permalink</a>)
+(<a href="https://yt-project.github.io/yt-4.0-paper/v/90d6f3ccc31815e6dd176d7d202eec7ae2f508e2/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/yt-project/yt-4.0-paper/tree/95bfe80cedacc5d9139cc6cadbb9ddb82be6689c">yt-project/yt-4.0-paper@95bfe80</a>
+from <a href="https://github.com/yt-project/yt-4.0-paper/tree/90d6f3ccc31815e6dd176d7d202eec7ae2f508e2">yt-project/yt-4.0-paper@90d6f3c</a>
 on January 9, 2023.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -1540,11 +1540,13 @@ corresponds to a unitless measurement along the ray from start to end.</p>
 <p>This surface object identifies isocontours on a cell-by-cell basis,
 with no consideration of global connectedness, and returns the
 vertices of the Triangles in that isocontour. This object simply
-returns the vertices of all the triangles calculated by the <code>marching cubes &lt;https://en.wikipedia.org/wiki/Marching_cubes&gt;</code>_ algorithm; for
+returns the vertices of all the triangles calculated by the <a href="https://en.wikipedia.org/wiki/Marching_cubes">marching
+cubes</a> algorithm; for
 more complex operations, such as identifying connected sets of cells
 above a given threshold, see the extract_connected_sets function.
 This is more useful for calculating, for instance, total isocontour
-area, or visualizing in an external program (such as <code>MeshLab &lt;http://www.meshlab.net&gt;</code>_.) The object has the properties .vertices
+area, or visualizing in an external program (such as
+<a href="http://www.meshlab.net">MeshLab</a>.) The object has the properties .vertices
 and will sample values if a field is requested. The values are
 interpolated to the center of a given face.</p>
 <h4 id="sec:dobj-union">Union</h4>
